# bevy_example_platformer

./: Cargo.toml  README.md
assets/: example_platformer.ldtk
src/: components.rs  main.rs  systems.rs
