[package]
name = "bevy_example_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["file_watcher", "embedded_watcher"] }
bevy_ecs_ldtk = { version = "0.9.0", features = ["atlas"] }
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = "0.24.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
